[gd_scene load_steps=4 format=2]

[ext_resource path="res://QuizPanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.654902, 0.223529, 0.0313726, 1 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.682353, 0.0392157, 0.0392157, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
PanelContainer/styles/panel = SubResource( 1 )

[node name="QuizPanel" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -450.0
margin_top = -110.0
script = ExtResource( 1 )

[node name="pc" type="PanelContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 2 )

[node name="hbx" type="HBoxContainer" parent="pc"]
margin_right = 288.0
margin_bottom = 110.0
size_flags_horizontal = 3

[node name="v1" type="VBoxContainer" parent="pc/hbx"]
margin_right = 164.0
margin_bottom = 110.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3

[node name="buttons1_2" type="HBoxContainer" parent="pc/hbx/v1"]
margin_right = 164.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="QBHappy" type="Button" parent="pc/hbx/v1/buttons1_2"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Happy"

[node name="QBSad" type="Button" parent="pc/hbx/v1/buttons1_2"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sad"

[node name="buttons3_4" type="HBoxContainer" parent="pc/hbx/v1"]
margin_top = 24.0
margin_right = 164.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="QBAngry" type="Button" parent="pc/hbx/v1/buttons3_4"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Angry"

[node name="QBFear" type="Button" parent="pc/hbx/v1/buttons3_4"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fear"

[node name="buttons5_6" type="HBoxContainer" parent="pc/hbx/v1"]
visible = false
margin_top = 48.0
margin_right = 164.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="QBDisgust" type="Button" parent="pc/hbx/v1/buttons5_6"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Disgust"

[node name="QBSurprise" type="Button" parent="pc/hbx/v1/buttons5_6"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Surprise"

[node name="message" type="Label" parent="pc/hbx/v1"]
margin_top = 48.0
margin_right = 164.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="v2" type="VBoxContainer" parent="pc/hbx"]
margin_left = 168.0
margin_right = 288.0
margin_bottom = 110.0
size_flags_horizontal = 3

[node name="score" type="Label" parent="pc/hbx/v2"]
margin_right = 120.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.380392, 0.654902, 0.698039, 1 )
text = "Score: 0"

[node name="closebutton" type="Button" parent="pc/hbx/v2"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 38.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Close"
[connection signal="pressed" from="pc/hbx/v1/buttons1_2/QBHappy" to="." method="_on_QBHappy_pressed"]
[connection signal="pressed" from="pc/hbx/v1/buttons1_2/QBSad" to="." method="_on_QBSad_pressed"]
[connection signal="pressed" from="pc/hbx/v1/buttons3_4/QBAngry" to="." method="_on_QBAngry_pressed"]
[connection signal="pressed" from="pc/hbx/v1/buttons3_4/QBFear" to="." method="_on_QBFear_pressed"]
[connection signal="pressed" from="pc/hbx/v1/buttons5_6/QBDisgust" to="." method="_on_QBDisgust_pressed"]
[connection signal="pressed" from="pc/hbx/v1/buttons5_6/QBSurprise" to="." method="_on_QBSurprise_pressed"]
[connection signal="pressed" from="pc/hbx/v2/closebutton" to="." method="_on_closebutton_pressed"]
